[gd_scene load_steps=7 format=3 uid="uid://c3cl77r65dexu"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/menu/editor_toolbar.gd" id="1_o71fd"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/menu/action_popup_menu.gd" id="2_ni0c8"]
[ext_resource type="Texture2D" uid="uid://bs54uhn80ykrr" path="res://addons/cyclops_level_builder/art/icons/xray_normal.svg" id="3_ldp0l"]
[ext_resource type="Texture2D" uid="uid://dloyvoq8piwx0" path="res://addons/cyclops_level_builder/art/icons/snap.svg" id="4_begwr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7kxq"]

[sub_resource type="Theme" id="Theme_0hxey"]
PanelContainer/styles/panel = SubResource("StyleBoxEmpty_o7kxq")

[node name="PanelContainer" type="PanelContainer"]
offset_right = 739.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme = SubResource("Theme_0hxey")
script = ExtResource("1_o71fd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ToolButtonContainer" type="HBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="HBoxContainer"]
layout_mode = 2

[node name="Menu" type="PopupMenu" parent="HBoxContainer/MenuBar"]
unique_name_in_owner = true
item_count = 24
item_0/text = "Duplicate Selected Blocks"
item_0/id = 1000
item_1/text = "Merge Selected Blocks"
item_1/id = 1001
item_2/text = "Subtract Block"
item_2/id = 1002
item_3/text = "Intersect Blocks"
item_3/id = 1003
item_4/text = "Delete Selected Blocks"
item_4/id = 1004
item_5/text = "Snap to grid"
item_5/id = 1005
item_6/text = ""
item_6/id = -1
item_6/separator = true
item_7/text = "Convert To Godot Mesh"
item_7/id = 1006
item_8/text = "Export As Gltf..."
item_8/id = 1007
item_9/text = ""
item_9/id = -1
item_9/separator = true
item_10/text = "Rotate 90 Ccw X"
item_10/id = 1008
item_11/text = "Rotate 90 Cw X"
item_11/id = 1009
item_12/text = "Rotate 180 X"
item_12/id = 1010
item_13/text = "Mirror Selection X"
item_13/id = 1011
item_14/text = ""
item_14/id = -1
item_14/separator = true
item_15/text = "Rotate 90 Ccw Y"
item_15/id = 1012
item_16/text = "Rotate 90 Cw Y"
item_16/id = 1013
item_17/text = "Rotate 180 Y"
item_17/id = 1014
item_18/text = "Mirror Selection Y"
item_18/id = 1015
item_19/text = ""
item_19/id = -1
item_19/separator = true
item_20/text = "Rotate 90 Ccw Z"
item_20/id = 1016
item_21/text = "Rotate 90 Cw Z"
item_21/id = 1017
item_22/text = "Rotate 180 Z"
item_22/id = 1018
item_23/text = "Mirror Selection Z"
item_23/id = 1019
script = ExtResource("2_ni0c8")

[node name="check_lock_uvs" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
text = "Lock UVs"

[node name="bn_snap" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Snapping on/off"
toggle_mode = true
button_pressed = true
icon = ExtResource("4_begwr")

[node name="snap_options" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Snapping system"

[node name="display_mode" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "How the mesh is shown in the viewport."
item_count = 3
selected = 1
popup/item_0/text = "Wireframe"
popup/item_0/id = 0
popup/item_1/text = "Mesh"
popup/item_1/id = 1
popup/item_2/text = "Materials"
popup/item_2/id = 2

[node name="bn_xray" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Xray"
toggle_mode = true
icon = ExtResource("3_ldp0l")

[connection signal="toggled" from="HBoxContainer/check_lock_uvs" to="." method="_on_check_lock_uvs_toggled"]
[connection signal="toggled" from="HBoxContainer/bn_snap" to="." method="_on_bn_snap_toggled"]
[connection signal="item_selected" from="HBoxContainer/snap_options" to="." method="_on_snap_options_item_selected"]
[connection signal="item_selected" from="HBoxContainer/display_mode" to="." method="_on_display_mode_item_selected"]
[connection signal="toggled" from="HBoxContainer/bn_xray" to="." method="_on_bn_xray_toggled"]
